--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ PHP_PORT = 9000
 PMA_PORT = 70
 SQL_PORT = 3306
 
-DB_HOST=localhost
-DB_DATABASE=matpoz_crmv5
-DB_USERNAME=matpoz_crm
-DB_PASSWORD=93K9ovHfmD
+DB_HOST=mysql
+DB_DATABASE=db
+DB_USERNAME=user
+DB_PASSWORD=pass
