--- a/.env
+++ b/.env
@@ -1,12 +1,15 @@
+# App
 APP_NAME = Laravel
 APP_URL = localhost
 
+# Database
+DB_HOST=mysql
+DB_DATABASE=homestead
+DB_USERNAME=root
+DB_PASSWORD=secret
+
+# Ports
 APP_PORT = 8080
 PHP_PORT = 9000
 PMA_PORT = 70
 SQL_PORT = 3306
-
-DB_HOST=mysql
-DB_DATABASE=db
-DB_USERNAME=user
-DB_PASSWORD=pass
