--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
             - "${APP_PORT}:80"
         volumes:
             - ./src:/var/www/html:delegated
-            - ./.docker/php/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
+            - ./.docker/php/php.ini:/usr/local/etc/php/conf.d/php.ini
         depends_on:
             - php
             - mysql
@@ -54,7 +54,7 @@ services:
             PMA_PASSWORD: ${DB_PASSWORD}
             PMA_PORT: 3306
         volumes:
-            - ./.docker/php/uploads.ini:/usr/local/etc/php/conf.d/php-phpmyadmin.ini
+            - ./.docker/php/php.ini:/usr/local/etc/php/conf.d/php-phpmyadmin.ini
         depends_on:
             - mysql
         links:
