--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
         depends_on:
             - php
             - mysql
+            - phpmyadmin
         networks:
             - laraApp
         environment:
