New readme.md and .env optimize

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # App
-APP_NAME = Laravel
+APP_NAME = laravel_app
 APP_URL = localhost
 
 # Database
@@ -11,5 +11,5 @@ DB_PASSWORD=secret
 # Ports
 APP_PORT = 8080
 PHP_PORT = 9000
-PMA_PORT = 70
 SQL_PORT = 3306
+PMA_PORT = 70
