--- a/.github/workflows/deploy-develop-application.yml
+++ b/.github/workflows/deploy-develop-application.yml
@@ -6,10 +6,8 @@ name: '🎉 Deploy: Develop Application'
 ##
 on:
   push:
-    branches: [ develop ]
-  pull_request:
-    branches: [ develop ]
-
+    branches:
+      - develop
 
 jobs:
 
