--- a/.github/workflows/deploy-main-application.yml
+++ b/.github/workflows/deploy-main-application.yml
@@ -6,10 +6,8 @@ name: '🎉 Deploy: Main Application'
 ##
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+    branches:
+      - main
 
 jobs:
 
