--- a/.env
+++ b/.env
@@ -2,6 +2,12 @@
 APP_NAME = laravel_app
 APP_URL = localhost
 
+# Users and Group
+NGINXGROUP=www-data
+NGINXUSER=www-data
+PHPGROUP=www-data
+PHPUSER=www-data
+
 # Database
 DB_HOST=mysql
 DB_DATABASE=homestead
@@ -14,5 +20,9 @@ PHP_PORT = 9000
 SQL_PORT = 3306
 PMA_PORT = 70
 REDIS_PORT = 6379
+
+NPM_PORT = 3000
+NPM1_PORT = 3001
+
 MAILHOG_PORT = 1025
 MAILHOG1_PORT = 8025
