fix bug and upgrade

--- a/.env
+++ b/.env
@@ -3,10 +3,8 @@ APP_NAME = laravel_app
 APP_URL = localhost
 
 # Users and Group
-NGINXGROUP=www-data
-NGINXUSER=www-data
-PHPGROUP=www-data
-PHPUSER=www-data
+#UID="-1000"
+#GID="-1000"
 
 # Database
 DB_HOST=mysql
