--- a/docker-compose.root.yml
+++ b/docker-compose.root.yml
@@ -54,6 +54,8 @@ services:
       PMA_USER: ${DB_USERNAME}
       PMA_PASSWORD: ${DB_PASSWORD}
       PMA_PORT: 3306
+    volumes:
+      - ./.docker/php/php.ini:/usr/local/etc/php/conf.d/php-phpmyadmin.ini
     depends_on:
       - mysql
     links:
