--- a/docker-compose.root.yml
+++ b/docker-compose.root.yml
@@ -80,7 +80,7 @@ services:
 
   redis:
     image: redis:alpine
-    container_name: redis
+    container_name: ${APP_NAME}_redis
     restart: unless-stopped
     ports:
       - ${REDIS_PORT}:6379
