--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -153,3 +153,15 @@ services:
       - ./src:/var/www/html:delegated
     networks:
       - laravel
+  queue:
+    image: php
+    restart: unless-stopped
+    command: bash -c 'php artisan queue:work;'
+    container_name: ${APP_NAME}_queue
+    depends_on:
+        - redis
+    volumes:
+      - ./src:/var/www/html:delegated
+    working_dir: /var/www/html
+    networks:
+      - laravel
