--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # App
-APP_NAME = laravel_app
-APP_URL = localhost
+APP_NAME=laravel_app
+APP_URL=localhost
+APP_DOMAIN=domain.test
 
 # Users and Group
 #UID="-1000"
@@ -13,14 +14,14 @@ DB_USERNAME=root
 DB_PASSWORD=secret
 
 # Ports
-APP_PORT = 8080
-PHP_PORT = 9000
-SQL_PORT = 3306
-PMA_PORT = 70
-REDIS_PORT = 6379
+APP_PORT=8080
+PHP_PORT=9000
+SQL_PORT=3306
+PMA_PORT=70
+REDIS_PORT=6379
 
-NPM_PORT = 3000
-NPM1_PORT = 3001
+NPM_PORT=3000
+NPM1_PORT= 3001
 
-MAILHOG_PORT = 1025
-MAILHOG1_PORT = 8025
+MAILHOG_PORT=1025
+MAILHOG1_PORT=8025
