--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     index index.php index.html;
-    server_name _;
+    server_name ${APP_DOMAIN};
     root /var/www/html/public;
 
     location / {
